@@ -2,6 +2,10 @@
 
 	* lib/b_memx.c (bk_memx_append): Convert function to use count
 	instead of len, so as to match the rest of the memx API.
+	(bk_memx_info): Function export all values in a bk_memx.
+
+	* bk_memx_size: constant which allows outsiders to know the size
+	of a bk_memx structure.
 
 2007-09-13  James Tanis  <jtt@outpost.tanis.org>
 
